--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<h1>Name of the destination</h1><br>
+	<p>Brief overview of the destination</p>
+	<ol>
+		<li><b>kailash</b></li>
+		<li><b>vrindavan</b></li>
+		<li><b>aruna</b></li>
+		<li><b>tirupathi</b></li>
+		<li><b>kashi</b></li>
+	</ol>
+	<ui>
+		<li><b>puri</b></li>
+		<li><b>idli</b></li>
+		<li><b>dosa</b></li>
+		<li><b>upma</b></li>
+		<li><b>uggani</b></li>
+	</ui>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
