--- a/main.html
+++ b/main.html
@@ -10,18 +10,18 @@
 	<h1>Name of the destination</h1><br>
 	<p>Brief overview of the destination</p>
 	<ol>
-		<li><b>kailash</b></li>
-		<li><b>vrindavan</b></li>
-		<li><b>aruna</b></li>
-		<li><b>tirupathi</b></li>
-		<li><b>kashi</b></li>
+		<li><b><i>kailash</i></b></li>
+		<li><b><i>vrindavan</i></b></li>
+		<li><b><i>aruna</i></b></li>
+		<li><b><i>tirupathi</i></b></li>
+		<li><b><i>kashi</i></b></li>
 	</ol>
 	<ui>
-		<li><b>puri</b></li>
-		<li><b>idli</b></li>
-		<li><b>dosa</b></li>
-		<li><b>upma</b></li>
-		<li><b>uggani</b></li>
+		<li><b><i>puri</i></b></li>
+		<li><b><i>idli</i></b></li>
+		<li><b><i>dosa</i></b></li>
+		<li><b><i>upma</i></b></li>
+		<li><b><i>uggani</i></b></li>
 	</ui>
 	
 	<!-- the entire body must be written by student -->
